# blocktest

./: .gitignore  CMakeLists.txt  CMakePresets.json  README.md  ci_test.py  conanfile.txt  debug_with_xvfb.sh
proto/: blockserver.proto
src/: bedrockoverlay.cpp  bedrockoverlay.h  block.cpp  block.h  block_renderer.cpp  block_renderer.h  camera.cpp  camera.h  chunk_generators.cpp  chunk_generators.h  chunk_mesh.cpp  chunk_mesh.h  chunkdims.h  chunkoverlay.h  chunkspan.cpp  chunkspan.h  chunktransform.h  client.cpp  client.h  emptychunk.cpp  emptychunk.h  gl_includes.h  main.cpp  name_component.cpp  name_component.h  perlinnoiseoverlay.cpp  perlinnoiseoverlay.h  player_session.cpp  player_session.h  position.cpp  position.h  registry_wrapper.h  server.cpp  server.h  shader.cpp  shader.h  snapshot_archive.h  sqlite_chunk_persistence.cpp  sqlite_chunk_persistence.h  statefulchunkoverlay.cpp  (+8 more)
tests/: CMakeLists.txt  test_block.cpp  test_chunkspan.cpp  test_client_server.cpp  test_position.cpp  test_world.cpp
